--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
+
+# Ignorar carpeta con la informacion para crear el curso 
+information/
+
+
